--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Your assignment is to implement a URL shortening service using Node.",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only index.ts",
-    "test": " jest "
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "start": "npx ts-node src/index.ts",
+    "build": "tsc",
+    "prod": "node dist/index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,23 +18,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nanoid": "^5.1.3",
-    "swagger-jsdoc": "^6.2.8",
+    "js-yaml": "^4.1.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.13.10",
     "@types/supertest": "^6.0.2",
-    "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
-    "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
 }
