--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,14 @@
 {
-    "compilerOptions": {
-      "module": "commonjs",
-      "declaration": true,
-      "removeComments": true,
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "allowSyntheticDefaultImports": true,
-      "target": "ES2021",
-      "sourceMap": true,
-      "outDir": "./dist",
-      "baseUrl": "./",
-      "incremental": true,
-      "skipLibCheck": true,
-      "strictNullChecks": true,
-      "forceConsistentCasingInFileNames": true,
-      "noImplicitAny": false,
-      "strictBindCallApply": false,
-      "noFallthroughCasesInSwitch": false,
-      "esModuleInterop": true,
-      "rootDir": "./src",
-      "strict": true,
-      "moduleResolution": "node",
-      "resolveJsonModule": true,
-      "types": ["node", "jest"]
-  
-    }
-  }
+  "compilerOptions": {
+    "target": "es2016", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "module": "commonjs", /* Specify what module code is generated. */
+    "esModuleInterop": true, /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
+    "forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
+    "strict": true, /* Enable all strict type-checking options. */
+    "skipLibCheck": true, /* Skip type checking all .d.ts files. */
+    "outDir": "./dist"
+  },
+  "include": [
+    "src/**/*"
+  ]
+}
